--- a/WeatherAppBackend/appsettings.json
+++ b/WeatherAppBackend/appsettings.json
@@ -14,8 +14,8 @@
   },
   "OpenWeatherApi": {
     "Key": "9cff7829929db991be6bf2197a8711d7",
-    "CurrentWeatherUrl": "https://api.openweathermap.org/data/2.5/weather?q={0}&appid={1}",
-    "ForecastForDays": "https://api.openweathermap.org/data/2.5/forecast?q={0}&cnt={1}&appid={2}",
-    "HourlyForecast": "https://api.openweathermap.org/data/2.5/weather?q={0}&exclude=current,minutely,daily,alerts&appid={1}"
+    "CurrentWeatherUrl": "https://api.openweathermap.org/data/2.5/weather?q={0}&units=metric&appid={1}",
+    "ForecastForDays": "https://api.openweathermap.org/data/2.5/forecast?q={0}&cnt={1}&units=metric&appid={2}",
+    "HourlyForecast": "https://api.openweathermap.org/data/2.5/weather?q={0}&exclude=current,minutely,daily,alertsunits=metric&units=metric&appid={1}"
   }
 }
